[package]
name = "xingapi"
version = "0.2.12"
authors = ["Shinwoo Park <natural7530@gmail.com>"]
edition = "2018"
description = "A safe, easy and optimized abstraction for XingAPI with support for async/await syntax"
repository = "https://github.com/konan8205/xingapi-rs"
license = "MPL-2.0"
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[package.metadata.docs.rs]
features = ["serde"]
default-target = "i686-pc-windows-msvc"
targets = ["i686-pc-windows-msvc", "i686-pc-windows-gnu"]
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
array-init = "1.0"
crossbeam-channel = "0.5"
encoding_rs = { version = "0.8", features = ["fast-hangul-encode"] }
lazy_static = "1.4"
libloading = "0.7"
xingapi-res = { path = "./res", version = "=0.2.12" }

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
clap = "3.0.0-beta.2"
ctrlc = "3.1"
hex-literal = "0.3"

[target.'cfg(all(windows, target_arch = "x86"))'.dependencies.winapi]
version = "0.3"
features = ["minwindef", "ntdef", "windef", "winbase", "winuser", "winnt", "basetsd"]

[features]
default = []
simd-accel = ["encoding_rs/simd-accel"]

[workspace]
members = ["res"]
