[package]
name = "xingapi"
version = "0.3.0"
authors = ["Shinwoo Park <natural7530@gmail.com>"]
edition = "2021"
description = "A safe and easy wrapper around XingAPI by eBEST."
repository = "https://github.com/konan8205/xingapi-rs"
license = "MPL-2.0"
exclude = [".cargo/"]

[package.metadata.docs.rs]
features = ["serde"]
default-target = "i686-pc-windows-msvc"
targets = ["i686-pc-windows-gnu", "x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
encoding_rs = { version = "0.8", features = ["fast-hangul-encode"] }
threadpool = "1.8"

serde = { version = "1.0", features = ["derive"], optional = true }
