[package]
name = "xingapi"
version = "0.3.1"
authors = ["Shinwoo Park <natural7530@gmail.com>"]
edition = "2021"
description = "A safe and easy wrapper around XingAPI by eBEST."
repository = "https://github.com/konan8205/xingapi-rs"
license = "MPL-2.0"
exclude = [".cargo/", ".github/"]

[package.metadata.docs.rs]
features = ["serde"]
default-target = "i686-pc-windows-msvc"
targets = ["i686-pc-windows-gnu", "x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
array-init = "2.0"
crossbeam-channel = "0.5"
encoding_rs = { version = "0.8", features = ["fast-hangul-encode"] }
lazy_static = "1.4"
libloading = "0.7"
threadpool = "1.8"

serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["minwindef", "ntdef", "windef", "winbase", "winuser", "winnt", "basetsd"]

[dev-dependencies]
base64 = "0.13"
clap = { version = "2.33", default-features = false }
ctrlc = "3.2"
hex-literal = "0.3"
