[package]
name = "xingapi-res"
version = "0.2.10"
authors = ["Shinwoo Park <natural7530@gmail.com>"]
edition = "2018"
description = "XingAPI RES parser with serde support"
repository = "https://github.com/konan8205/xingapi-rs"
license = "MPL-2.0"
include = ["/src/**/*.rs", "/examples/*.rs", "/LICENSE", "/README.md"]

[package.metadata.docs.rs]
features = ["serde"]
default-target = "i686-pc-windows-msvc"
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
encoding_rs = { version = "0.8", features = ["fast-hangul-encode"] }
lazy_static = "1.4"
regex = "1"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
clap = "3.0.0-beta.2"
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
default = []

[[example]]
name = "json"
required-features = ["serde"]
